--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,5 +1,18 @@
 :root {
-    --mainBgColor: #0d6efd;
+    --mainBgColor: #118847;
+}
+
+
+/* #container {
+    border: solid red;
+} */
+
+#nav-local {
+    background-color: #118847;
+}
+
+#map_stat {
+    margin: auto;
 }
 
 .stats-items-item-row {
@@ -41,6 +54,7 @@
 
 #map {
     height: 500px;
+    height: 580px;
     margin-left: 20px;
 }
 
